fix: update cercle z-index for improved layout consistency

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -706,7 +706,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: inherit;
+    z-index: -1;
 }
 
 #cercle::after {
